--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
     display: none;
 }
 
-#error-container {
+#error-text {
     margin-top: 2rem;
     text-align: center;
 }
@@ -30,7 +30,7 @@ body {
     backdrop-filter: blur(4px);
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
-    background-color: rgba(175, 206, 227, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
 	padding: 2rem;
 	border-radius: 0.5rem;
 }
@@ -63,7 +63,7 @@ body {
 .form-input-container button {
 	width: 3rem;
     cursor: pointer;
-    background-color: #8DBCC7;
+    background-color: #1f1f1f;
     color: #fdfdff;
 }
 
