--- a/main.css
+++ b/main.css
@@ -6,121 +6,115 @@ body {
 }
 
 #wallpaper {
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    position: absolute;
-    object-fit: cover;
-    object-position: bottom;
+	height: 100%;
+	width: 100%;
+	z-index: -1;
+	position: absolute;
+	object-fit: cover;
+	object-position: bottom;
 }
 
 .hide {
-    display: none;
+	display: none;
 }
 
 #error-text {
-    margin-top: 2rem;
-    text-align: center;
+	margin-top: 2rem;
+	text-align: center;
 }
 
 .container {
-    color: #fff;
+	color: #fff;
 	width: 50%;
-    background: transparent;
-    backdrop-filter: blur(4px);
+	background: transparent;
+	backdrop-filter: blur(4px);
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
-    background-color: rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
+	background-color: rgba(0, 0, 0, 0.5);
 	padding: 2rem;
 	border-radius: 0.5rem;
 }
 
 .form {
 	width: 100%;
-    text-align: center;
+	text-align: center;
 }
 
 .form h3 {
 	margin-bottom: 1rem;
 }
 
-
 .form-input-container {
 	display: flex;
 	width: 100%;
 	height: 2.5rem;
-    gap: .25rem;
-   
+	gap: 0.25rem;
 }
 
 .form-input-container input {
 	width: 100%;
-    text-indent: 1rem;
-   
+	text-indent: 1rem;
 }
-
 
 .form-input-container button {
 	width: 3rem;
-    cursor: pointer;
-    background-color: #1f1f1f;
-    color: #fdfdff;
+	cursor: pointer;
+	background-color: #3a3a3a;
+	color: #fdfdff;
 }
 
-.form-input-container button, .form-input-container input {
-    border: none;
-    border-radius: .25rem;
+.form-input-container button,
+.form-input-container input {
+	border: none;
+	border-radius: 0.25rem;
 }
 
 #weather-data {
-    margin-top: 1rem;
-    padding-top: 1rem;
-    border-top: 2px solid #fff;
-    text-align: center;
-
+	margin-top: 1rem;
+	padding-top: 1rem;
+	border-top: 2px solid #fff;
+	text-align: center;
 }
 
 #weather-data h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: .5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 0.5rem;
 }
 
-
 #weather-data h2 > i {
-    font-size: 1rem;
+	font-size: 1rem;
 }
 
 #weather-data span {
-    margin: .5rem;
+	margin: 0.5rem;
 }
 
 #countryFlag {
-    height: 1.5rem
+	height: 1.5rem;
 }
 
 #description-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: .5rem 0rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0.5rem 0rem;
 }
 
 #description {
-    font-weight: bold;
-    text-transform: capitalize;
+	font-weight: bold;
+	text-transform: capitalize;
 }
 
 #details-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #details-container #humidity {
-    border-right: 2px solid#fff;
-    margin: .5rem;
-    padding: .5rem;
+	border-right: 2px solid#fff;
+	margin: 0.5rem;
+	padding: 0.5rem;
 }
-
