--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ body {
 .container {
 	color: #fff;
 	width: 50%;
+    max-width: 645px;
 	background: transparent;
 	backdrop-filter: blur(4px);
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
